Radio button version

--- a/index.html
+++ b/index.html
@@ -36,12 +36,10 @@
           <LABEL FOR="text">Enter text to render:</LABEL> &nbsp;
           <TEXTAREA NAME="text" ID="text" ROWS=4 COLS=40></TEXTAREA>
         </TD>
-<!--
         <TD>
-          <INPUT NAME="font" VALUE="52" TYPE="radio" ID="52"/><LABEL FOR="52">52-unit font</LABEL>
-          <INPUT NAME="font" VALUE="56" TYPE="radio" ID="56"/><LABEL FOR="56">56-unit font</LABEL>
+          <INPUT NAME="font" VALUE="solved" TYPE="radio" ID="solved" CHECKED><LABEL FOR="solved">Solved font</LABEL>
+          <INPUT NAME="font" VALUE="puzzle" TYPE="radio" ID="puzzle"><LABEL FOR="puzzle">Puzzle font</LABEL>
         </TD>
--->
       </TR>
     </TABLE>
 
