--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <TEXTAREA NAME="text" ID="text" ROWS=4 COLS=40></TEXTAREA>
         </TD>
         <TD>
-          <INPUT NAME="font" VALUE="solved" TYPE="radio" ID="solved" CHECKED><LABEL FOR="solved">Solved font</LABEL>
-          <INPUT NAME="font" VALUE="puzzle" TYPE="radio" ID="puzzle"><LABEL FOR="puzzle">Puzzle font</LABEL>
+          <INPUT NAME="rotateU" TYPE="checkbox" ID="rotateU"><LABEL FOR="rotateU">Rotate U</LABEL>
+          <BR>
+          <INPUT NAME="rotateI" TYPE="checkbox" ID="rotateI"><LABEL FOR="rotateI">Rotate I</LABEL>
         </TD>
       </TR>
     </TABLE>
