--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
           <LABEL FOR="text">Enter text to render:</LABEL> &nbsp;
           <TEXTAREA NAME="text" ID="text" ROWS=4 COLS=40></TEXTAREA>
         </TD>
-        <TD>
+        <TD STYLE="text-align: left">
           <INPUT NAME="rotateU" TYPE="checkbox" ID="rotateU"><LABEL FOR="rotateU">Rotate U</LABEL>
           <BR>
           <INPUT NAME="rotateI" TYPE="checkbox" ID="rotateI"><LABEL FOR="rotateI">Rotate I</LABEL>
+          <BR>
+          <INPUT NAME="anim" TYPE="checkbox" ID="anim"><LABEL FOR="anim">Animate rotations</LABEL>
         </TD>
       </TR>
     </TABLE>
