Write description text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
     <HR>
 
     <P>
-    <!--WRITE ME-->
+    <B>Two shapes.</B> At age 3, Ada wrote both letters of her name (A and D) using two simpler symbols: a U shape and a line.  Together we designed a complete typeface where each letter is written with exactly these two symbols, each used exactly once.  Every U shape has exactly the same proportions; the shapes are just rotated and/or scaled.
+
+    <P>
+    <B>Puzzle fonts.</B> To obscure the letters and turn text into a puzzle, you can <b>rotate</b> the U shapes by 180&deg; and/or rotate the lines by 90&deg; (using the checkboxes in the top right). You can also <b>animate</b> these rotations for a surprising animation font.
 
     <P>
     Check out <A HREF="http://erikdemaine.org/fonts/">other mathematical and
