--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <TR>
         <TD>
           <LABEL FOR="text">Enter text to render:</LABEL> &nbsp;
-          <TEXTAREA NAME="text" ID="text" ROWS=4 COLS=40></TEXTAREA>
+          <TEXTAREA NAME="text" ID="text" ROWS=4 COLS=40>text</TEXTAREA>
         </TD>
         <TD STYLE="text-align: left">
           <INPUT NAME="rotateU" TYPE="checkbox" ID="rotateU"><LABEL FOR="rotateU">Rotate U</LABEL>
