--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <TD STYLE="text-align: left; vertical-align: middle;">
           <H1>Ada Font</H1>
         <TD STYLE="text-align: right; vertical-align: middle;">
-          <H2>by Ada Bienkowska, <A HREF="http://erikdemaine.org/">Erik Demaine</A> and <A HREF="http://martindemaine.org">Martin Demaine</A>, 2018</H2>
+          <H2>by Ada Bienkowska, <A HREF="http://erikdemaine.org/">Erik Demaine</A>, and <A HREF="http://martindemaine.org">Martin Demaine</A>, 2018</H2>
     </TABLE>
 
     <TABLE id="data" WIDTH="100%" CLASS="noprint">
