Add link to lipographic alphabet

--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
     <B>Puzzle fonts.</B> To obscure the letters and turn text into a puzzle, you can <b>rotate</b> the U shapes by 180&deg; and/or rotate the lines by 90&deg; (using the checkboxes in the top right). You can also <b>animate</b> these rotations for a surprising animation font.
 
     <P>
+    <B>Related fonts.</B>
+    <a href="http://www.gef.free.fr/">Gilles Esposito-Far&egrave;se</a>
+    independently designed a
+    &ldquo;<a href="http://www.gef.free.fr/ambigallery.html#CPT">lipographic alphabet</a>&rdquo;
+    that uses the same two symbols (U and line),
+    furthermore maintains a consistent scale of the symbols,
+    but doesn't always use both symbols
+    (or equivalently, sometimes one symbol is shrunk to zero)
+    and has varying-height letters.
+
+    <P>
     Check out <A HREF="http://erikdemaine.org/fonts/">other mathematical and
     puzzle fonts</A>. &bull; Feedback or not working?
     <A HREF="mailto:edemaine+fonts@mit.edu">Email Erik</A>.
