--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <P>
     <B>Related fonts.</B>
     <a href="http://www.gef.free.fr/">Gilles Esposito-Far&egrave;se</a>
-    independently designed a
+    independently designed in 2001 a
     &ldquo;<a href="http://www.gef.free.fr/ambigallery.html#CPT">lipographic alphabet</a>&rdquo;
     that uses the same two symbols (U and line),
     furthermore maintains a consistent scale of the symbols,
