Port to font-webapp

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       xmlns:xlink="http://www.w3.org/1999/xlink">
   <HEAD>
     <TITLE>Ada Font</TITLE>
-    <SCRIPT TYPE="text/javascript" src="node_modules/svg.js/dist/svg.min.js"></SCRIPT>
+    <SCRIPT TYPE="text/javascript" src="node_modules/@svgdotjs/svg.js/dist/svg.min.js"></SCRIPT>
     <SCRIPT TYPE="text/javascript" src="node_modules/furls/furls.js"></SCRIPT>
+    <SCRIPT TYPE="text/javascript" src="node_modules/font-webapp/font-webapp.js"></SCRIPT>
     <SCRIPT TYPE="text/javascript" src="font.js"></SCRIPT>
     <SCRIPT TYPE="text/javascript" src="index.js"></SCRIPT>
     <STYLE TYPE="text/css">
